<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/image" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Attempts"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <Button
            android:id="@+id/ButtonBackQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            android:text="@string/BackQuestion_Button_ru"></Button>

        <Button
            android:id="@+id/ButtonNextQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            android:text="@string/NextQuestion_Button_ru"></Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="850dp"
        android:gravity="center"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ImageFlowersId"
            android:layout_width="match_parent"
            android:layout_height="126dp"
            app:srcCompat="@drawable/flowers" />

        <TextView
            android:id="@+id/QuestionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Question_1_ru"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/Button1"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_background" />

            <Button
                android:id="@+id/Button2"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_background" />

            <Button
                android:id="@+id/Button3"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_background" />

            <Button
                android:id="@+id/Button4"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_background" />

        </LinearLayout>

        <TextView
            android:id="@+id/NumberQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QuestionNum_ru"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/ButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_background"
            android:text="@string/Back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>